--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,76 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Base application theme. -->
     <style name="Theme.SysMon" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/md_theme_light_primary</item>
-        <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
-        <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
-        <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
-        <item name="colorSecondary">@color/md_theme_light_secondary</item>
-        <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
-        <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
-        <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
-        <item name="colorTertiary">@color/md_theme_light_tertiary</item>
-        <item name="colorOnTertiary">@color/md_theme_light_onTertiary</item>
-        <item name="colorTertiaryContainer">@color/md_theme_light_tertiaryContainer</item>
-        <item name="colorOnTertiaryContainer">@color/md_theme_light_onTertiaryContainer</item>
-        <item name="colorError">@color/md_theme_light_error</item>
-        <item name="colorErrorContainer">@color/md_theme_light_errorContainer</item>
-        <item name="colorOnError">@color/md_theme_light_onError</item>
-        <item name="colorOnErrorContainer">@color/md_theme_light_onErrorContainer</item>
-        <item name="android:colorBackground">@color/md_theme_light_background</item>
-        <item name="colorOnBackground">@color/md_theme_light_onPrimaryContainer</item>
-        <item name="colorSurface">@color/md_theme_light_surface</item>
-        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>
-        <item name="colorSurfaceVariant">@color/md_theme_light_surfaceVariant</item>
-        <item name="colorOnSurfaceVariant">@color/md_theme_light_onSurfaceVariant</item>
-        <item name="colorOutline">@color/md_theme_light_outline</item>
-        <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
-        <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
-        <item name="colorPrimaryInverse">@color/md_theme_light_primaryInverse</item>
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@color/background
+        </item><!--The background color appears behind scrollable content.-->
+
+        <item name="fontFamily">@font/font_sofia_pro</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
     <style name="Theme.SysMon.Splashscreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/md_theme_light_outline</item>
+        <item name="windowSplashScreenBackground">@color/colorAccentAlt</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/launcher_ic</item>
-        <item name="windowSplashScreenAnimationDuration">4000</item>
         <item name="postSplashScreenTheme">@style/Theme.SysMon</item>
     </style>
 
-    <style name="TransparentBottomSheetDialogStyle" parent="Theme.SysMon">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:colorBackground">@android:color/transparent</item>
-        <item name="android:windowBackground">@color/md_theme_light_surfaceVariant</item>
-    </style>
-
-    <!--EditText-->
-    <style name="editTextMediumNormal">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/text_size_medium</item>
-        <item name="android:textColor">@color/md_theme_light_onPrimaryContainer</item>
-        <item name="android:inputType">textCapSentences</item>
-    </style>
-
-
-    <style name="ButtonStyle">
-        <item name="background">@color/md_theme_dark_primary</item>
-        <item name="theme">@style/textMediumBoldDark</item>
-    </style>
-
-    <style name="TextInputLayoutStyle" parent="TextAppearance.AppCompat">
-        <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">@color/md_theme_dark_surface</item>
-        <item name="android:textSize">20sp</item>
-        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">@color/md_theme_light_onPrimaryContainer</item>
-        <item name="theme">@style/textMediumLighter</item>
-    </style>
-
-    <style name="SpinnerTheme">
-        <item name="android:textColor">@color/md_theme_dark_surface</item>
-        <item name="android:fontFamily">@font/sofia_pro_bold</item>
-        <item name="android:textStyle">bold</item>
-        <item name="strokeColor">@color/md_theme_dark_surface</item>
-        <item name="strokeWidth">@dimen/spacing_nano</item>
-    </style>
 </resources>
