--- a/app/src/main/res/layout/fragment_monitor_fragment.xml
+++ b/app/src/main/res/layout/fragment_monitor_fragment.xml
@@ -19,80 +19,15 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardUrl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginEnd="@dimen/margin_medium"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="2dp"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_margin="@dimen/margin_small"
-                        android:id="@+id/tiURL"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:hintEnabled="true"
-                        app:layout_constraintEnd_toStartOf="@id/btnSave"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:hint="@string/url">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/etURL"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@={viewModel.savedUrl}"
-                            android:inputType="textUri" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <Button
-                        android:id="@+id/btnSave"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="@id/tiURL"
-                        app:layout_constraintBottom_toBottomOf="@id/tiURL"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/tiURL"
-                        android:layout_margin="@dimen/margin_small"
-                        android:text="@string/save" />
-
-                    <Button
-                        android:id="@+id/btnConnect"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/tiURL"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_margin="@dimen/margin_small"
-                        android:text="@string/connect" />
-
-
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardCpuData"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="@dimen/margin_medium"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="2dp"
-                app:layout_constraintTop_toBottomOf="@id/cardUrl">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -146,8 +81,8 @@
 
                         <com.github.lzyzsd.circleprogress.ArcProgress
                             android:id="@+id/arcCPUUsage"
-                            android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
                             android:layout_margin="@dimen/margin_small"
                             app:arc_bottom_text="@string/usage_load"
                             app:arc_bottom_text_size="16dp"
@@ -166,8 +101,8 @@
 
                         <com.github.lzyzsd.circleprogress.ArcProgress
                             android:id="@+id/arcCPUTemp"
-                            android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
                             android:layout_margin="@dimen/margin_small"
                             app:arc_bottom_text="@string/temp"
                             app:arc_bottom_text_size="16dp"
@@ -195,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="@dimen/margin_medium"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="2dp"
@@ -228,8 +163,8 @@
 
                         <com.github.lzyzsd.circleprogress.ArcProgress
                             android:id="@+id/arcGPUUsage"
-                            android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
                             android:layout_margin="@dimen/margin_small"
                             app:arc_bottom_text="@string/usage_load"
                             app:arc_bottom_text_size="16dp"
@@ -248,8 +183,8 @@
 
                         <com.github.lzyzsd.circleprogress.ArcProgress
                             android:id="@+id/arcGPUTemp"
-                            android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
                             android:layout_margin="@dimen/margin_small"
                             app:arc_bottom_text="@string/temp"
                             app:arc_bottom_text_size="16dp"
@@ -277,12 +212,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="@dimen/margin_medium"
                 android:layout_marginBottom="@dimen/margin_small"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="2dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardGPUData">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -355,6 +289,82 @@
                         app:rpbProgressColor="#070600"
                         app:rpbProgressTextColor="#F28969"
                         app:rpbTextPadding="12dp" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="2dp"
+                app:layout_constraintTop_toBottomOf="@id/cardRAMData">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_margin="@dimen/margin_small"
+                        android:id="@+id/tiURL"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:hintEnabled="true"
+                        app:layout_constraintEnd_toStartOf="@id/btnSave"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:hint="@string/url">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etURL"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@={viewModel.savedUrl}"
+                            android:inputType="textUri" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/btnSave"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/tiURL"
+                        app:layout_constraintBottom_toBottomOf="@id/tiURL"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/tiURL"
+                        android:layout_margin="@dimen/margin_small"
+                        android:text="@string/save" />
+
+                    <Button
+                        android:id="@+id/btnConnect"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/tiURL"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/btnFillAddress"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_margin="@dimen/margin_small"
+                        android:text="@string/connect" />
+
+
+                    <Button
+                        android:id="@+id/btnFillAddress"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/tiURL"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/btnConnect"
+                        android:layout_margin="@dimen/margin_small"
+                        android:visibility="gone"
+                        android:text="@string/fill_ip_address" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
